--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
           <div class="col-md-4 mb-5">
             <div class="card h-100">
               <div class="card-body">
-                <h2 class="card-title">API Project 2</h2>
-                <p class="card-text">I put this one off until the day before it was due!</p>
+                <h2 class="card-title">World Holidays API Project</h2>
+                <p class="card-text">Displays world holidays according to user-selected country and date</p>
+                <img class="card-img-bottom" src="res/holidays.jpg" alt="defensemech.com" />
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary btn-sm btn-dark">LOL</a>
+                <a href="#" class="btn btn-primary btn-sm btn-dark">View on Firebase</a>
               </div>
             </div>
           </div>
