--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <img class="card-img-bottom" src="res/holidays.jpg" alt="defensemech.com" />
               </div>
               <div class="card-footer">
-                <a href="#" class="btn btn-primary btn-sm btn-dark">View on Firebase</a>
+                <a href="https://world-holidays-76576.web.app/" class="btn btn-primary btn-sm btn-dark">View on Firebase</a>
               </div>
             </div>
           </div>
